--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         
 
         <div class="landing-description">
-          <h1>Junior Web Developer</h1>
+          <h1 class="landing-h1">Junior Web Developer</h1>
           <h2 class="dev-heading">Demi-Leigh Jefferies</h2>
-          <p>
+          <p class="landing-text">
             Hi there! Welcome to my portfolio.<br />I am an aspiring Web
             Developer<br />Have a look around my portfolio and get to know a
             little more about me.<br />Hopefully we'll be in contact soon.
