--- a/testimonials.html
+++ b/testimonials.html
@@ -38,35 +38,35 @@
     <div class="owl-carousel">
       <div class="test-content">
         <img src="./images/godwin-dzvapatsra.jpg" class="test-img" alt="Image">
-        <h2>Godwin Dzvapatsva</h2>
-        <h3>Head of Curriculum and Learning</h3>
+        <h2 class="test-heading">Godwin Dzvapatsva</h2>
+        <h3>Head of Curriculum</h3>
         <q>Demi-Leigh enjoys working without supervision and always continues to carry out duties effectively.<br>But also knows when a mentor’s advice or authority is required. I recommend her.</q>
       </div>
 
       <div class="test-content">
          <img src="./images/candice-amon.png" class="test-img"alt="Image">
-        <h2>Candice Amon</h2>
-        <h3>Life Choices Academy Facilitator</h3>
+        <h2 class="test-heading">Candice Amon</h2>
+        <h3>Academy Facilitator</h3>
         <q>Very mature on her outlook on life.<br>A quiet and resilient individual who always tries her best in all she does.<br>Very consistent in communication and methodical approach to tasks.<br>Soft hearted,however knows her boundaries and does not allow<br>stumbling blocks to get her down rather than using it as stepping stones.</q>
       </div>
 
       <div class="test-content">
         <img src="./images/Naeemah.jpg"  class="test-img" alt="Image">
-        <h2>Naeemah Davis</h2>
+        <h2 class="test-heading">Naeemah Davis</h2>
         <h3>Peer</h3>
         <q>Demi is a talented , sweet and hard-working indiviual.<br>With both intellect and a great personality on her side,<br>I would recommend her for any form of work<br>as her presence is beneficial to all.</q>
       </div>
 
       <div class="test-content">
         <img src="./images/2021-team-jason-wandrag.jpg" class="test-img" alt="Image">
-        <h2>Jason Wandrag</h2>
+        <h2 class="test-heading">Jason Wandrag</h2>
         <h3>Lecturer</h3>
         <q>Demi-Leigh always has a smile on her face.<br>Her gentle personality and calmness in stressful situations will make for a great asset in any company.</q>
       </div>
 
       <div class="test-content">
         <img src="./images/Brent Lee Johnson (3).JPG" class="test-img" alt="Image">
-        <h2>Brent Lee Johnson</h2>
+        <h2 class="test-heading">Brent Lee Johnson</h2>
         <h3>Peer</h3>
         <q>Demi-Leigh is a dangerous student as she has that thirst to learn.<br>As hard-working as she is, Demi is not afraid to ask for help.</q>
       </div>
