--- a/My Projects.html
+++ b/My Projects.html
@@ -106,7 +106,7 @@
 
           <div class="buttons">
             <a
-              href="https://vigorous-almeida-273b20.netlify.app/"
+              href="https://my-timeline.netlify.app/"
               target="_blank"
               class="button"
               >Live</a
@@ -261,7 +261,7 @@
 
           <div class="buttons">
             <a
-              href="https://quizzical-mestorf-c46fe6.netlify.app/"
+              href="https://confident-snyder-b1857c.netlify.app/"
               target="_blank"
               class="button"
               >Live</a
